--- a/configs/pubmed_sft_pipeline.yaml
+++ b/configs/pubmed_sft_pipeline.yaml
@@ -5,7 +5,7 @@ dask_workers: 8
 loader:
   class: j1.data_loaders.local.LocalDataLoader
   params:
-    path: results/pubmed_qa
+    path: results/pubmed_patient_case
     format: parquet
 
 # No processors needed as we're just converting the existing QA pairs to SFT format
