--- a/configs/pubmedqa_eval.yaml
+++ b/configs/pubmedqa_eval.yaml
@@ -38,13 +38,14 @@ models:
     model: "J1"
     api_base: "http://localhost:8000/v1"
     api_key: "@"
-    max_concurrent_requests: 100
+    max_concurrent_requests: 200
     use_chain_of_thought: false
     params:
-      temperature: 0.1
-      max_tokens: 400
+      temperature: 0.65
+      max_tokens: 16000
+      top_p: 0.95
+      repetition_penalty: 2
 # Path to the JSON dataset file
-dataset_path: "data/pubmedqa.json"
-
+dataset_path: "data/pubmedqa.jsonl"
 # Optional: Limit the number of evaluations
-limit: 1000 # Set to null or remove to evaluate all items
+# limit: 1000 # Set to null or remove to evaluate all items
